--- a/Calculate/Base.lproj/Main.storyboard
+++ b/Calculate/Base.lproj/Main.storyboard
@@ -381,6 +381,9 @@
                                 <color key="tintColor" systemColor="systemRedColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="RECORD"/>
+                                <connections>
+                                    <segue destination="0Y0-ed-gua" kind="presentation" id="lha-8J-FY2"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -404,6 +407,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="20" y="68"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cCS-6K-txH">
+            <objects>
+                <viewController id="0Y0-ed-gua" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Ms-Ig-dgQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fat-Kb-3q6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="005-Ww-sex" customClass="recordCell" customModule="Calculate" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="005-Ww-sex" id="8Gn-Gu-gf7">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0y-L8-K8V">
+                                                    <rect key="frame" x="20" y="11" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="h0y-L8-K8V" firstAttribute="top" secondItem="8Gn-Gu-gf7" secondAttribute="topMargin" id="HGL-Im-Tuc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="h0y-L8-K8V" secondAttribute="bottom" id="WG4-5r-HEu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="h0y-L8-K8V" secondAttribute="trailing" id="clA-nn-zN5"/>
+                                                <constraint firstItem="h0y-L8-K8V" firstAttribute="leading" secondItem="8Gn-Gu-gf7" secondAttribute="leadingMargin" id="vWs-TA-aRw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oyA-Zq-Cue"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fat-Kb-3q6" firstAttribute="top" secondItem="0Ms-Ig-dgQ" secondAttribute="top" id="Az2-i2-wx6"/>
+                            <constraint firstItem="oyA-Zq-Cue" firstAttribute="bottom" secondItem="fat-Kb-3q6" secondAttribute="bottom" id="HZX-cq-UeJ"/>
+                            <constraint firstItem="oyA-Zq-Cue" firstAttribute="trailing" secondItem="fat-Kb-3q6" secondAttribute="trailing" id="keR-0F-PSM"/>
+                            <constraint firstItem="fat-Kb-3q6" firstAttribute="leading" secondItem="oyA-Zq-Cue" secondAttribute="leading" id="px0-kB-sLn"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iyg-fP-6IP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="741" y="68"/>
         </scene>
     </scenes>
     <designables>
